--- a/src/Index.html
+++ b/src/Index.html
@@ -54,5 +54,32 @@
             </div>
         </div>
     </div>
+    <section class="benefits">
+        <div class="container">
+            <div class="benefits__header">НАШИ ПРЕИМУЩЕСТВА
+            </div>
+            <div class="benefits__block">
+                <div>
+                    <img src="icons/benefits/cup.png" alt="" class="benefits__logo">
+                    <div class="benefits__subheader">Делимся опытом</div>
+                    <div class="benefits__descr">Наши сотрудники всегда готовы<br> поделиться своим опытом,<br> 
+                        так как сами бегают полумарафоны,<br> переплыли Босфор, готовятся к<br> соревнованиям по триатлону!</div>
+                </div>
+                <div>
+                    <img src="icons/benefits/heart.png" alt="" class="benefits__logo">
+                    <div class="benefits__subheader">Заботимся о здоровье</div>
+                    <div class="benefits__descr">Мы работаем для того,<br> 
+                        чтобы Ваши занятия спортом шли на<br> пользу Вашему здоровью и были в<br> радость Вам и Вашим близким!</div>
+                </div>
+                <div>
+                    <img src="icons/benefits/shoe.png" alt="" class="benefits__logo">
+                    <div class="benefits__subheader">Учим бегать</div>
+                    <div class="benefits__descr">Помогаем с обучением<br> 
+                        правильной технике бега!<br> 
+                        Дружим с крупнейшей школой бега в<br> России - <a href="#">I LOVE RUNNING.</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
