--- a/src/Index.html
+++ b/src/Index.html
@@ -56,8 +56,8 @@
     </div>
     <section class="benefits">
         <div class="container">
-            <div class="benefits__header">НАШИ ПРЕИМУЩЕСТВА
-            </div>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА
+            </h2>
             <div class="benefits__block">
                 <div>
                     <img src="icons/benefits/cup.png" alt="" class="benefits__logo">
@@ -81,5 +81,25 @@
             </div>
         </div>
     </section>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_white">
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ван E-mail" type="email">
+
+                <button class="button button_subbmit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
