--- a/src/Index.html
+++ b/src/Index.html
@@ -428,6 +428,48 @@
         </div>
     </section>
 
+    <section class="comments">
+        <div class="container">
+            <div class="title">отзывы клиентов</div>
+            <div class="comments__wrapper">
+                <div class="comments__item">
+                    <img src="img/comments/1.png" alt="1" class="comments__img">
+                    <div class="comments__text">
+                        <h2 class="comments__header">Ирина Иванченко</h2>
+                        <div class="comments__subheader">2 полумарафона</div>
+                        <div class="comments__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали<br> пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>
+                            Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>
+                            Новые цели - новый гаджет!<br><br>
+                            Спасибо, RunSmart! 
+                        </div>
+                    </div>
+                </div>
+                <div class="comments__item">
+                    <img src="img/comments/2.png" alt="2" class="comments__img">
+                    <div class="comments__text">
+                        <h2 class="comments__header">Иван Сёмочкин</h2>
+                        <div class="comments__subheader">1 полумарафон</div>
+                        <div class="comments__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.<br>
+                            Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели<br> первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы<br> анатомии, составили план тренировок на месяц вперёд.<br><br>
+                            С ними подготовился к своему первому полумарафону! Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+                <div class="comments__item">
+                    <img src="img/comments/3.png" alt="3" class="comments__img">
+                    <div class="comments__text">
+                        <h2 class="comments__header">Юлия Дашкина</h2>
+                        <div class="comments__subheader">2 полумарафона</div>
+                        <div class="comments__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось<br> тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и<br> решила попробовать.<br><br>
+                            Позвонила, ребята поинтересовались моими целями и подобрали очень интересный<br> вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2<br> полумарафона и несколько более коротких забегов и не намерена останавливаться!<br><br>
+                            Спасибо!!!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
