--- a/src/Index.html
+++ b/src/Index.html
@@ -470,6 +470,20 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2d374ca343cb6d3bbbb4511e56209080d1c1c81f55342540fc2568d5cf45f6f0&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/footer/facebook.png" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/footer/Instagram.png" alt="Instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/footer/pint.png" alt="pinterest"></a>
+            </div>
+        </div>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
