--- a/src/Index.html
+++ b/src/Index.html
@@ -518,6 +518,8 @@
         </div>
     </div>
 
+    <a href="#" class="pageup"><img src="icons/pageup.svg" alt="up"></a>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
