--- a/src/Index.html
+++ b/src/Index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RunSmart</title>
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css"/>
+    <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/slick.css"/>
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="css/style.min.css"/>
 </head>
 <body>
     <section id="up" class="promo">
@@ -432,7 +433,7 @@
         <div class="container">
             <div class="title">отзывы клиентов</div>
             <div class="comments__wrapper">
-                <div class="comments__item">
+                <div class="comments__item animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/comments/1.png" alt="1" class="comments__img">
                     <div class="comments__text">
                         <h2 class="comments__header">Ирина Иванченко</h2>
@@ -444,7 +445,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="comments__item">
+                <div class="comments__item animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/comments/2.png" alt="2" class="comments__img">
                     <div class="comments__text">
                         <h2 class="comments__header">Иван Сёмочкин</h2>
@@ -455,7 +456,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="comments__item">
+                <div class="comments__item animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
                     <img src="img/comments/3.png" alt="3" class="comments__img">
                     <div class="comments__text">
                         <h2 class="comments__header">Юлия Дашкина</h2>
@@ -527,6 +528,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
