--- a/src/Index.html
+++ b/src/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru_RU">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css"/>
     <link rel="stylesheet" href="css/fonts.css"/>
     <link rel="stylesheet" href="css/slick.css"/>
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.min.css"/>
 </head>
 <body>
@@ -104,7 +104,7 @@
         </div>
     </section>
     
-    <section class="carousel">
+    <div class="carousel">
       <div class="container">
         <div class="carousel__inner">
             <div>
@@ -118,7 +118,7 @@
             </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="catalog">
         <div class="container">
@@ -472,7 +472,7 @@
     </section>
 
     <footer class="footer">
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2d374ca343cb6d3bbbb4511e56209080d1c1c81f55342540fc2568d5cf45f6f0&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+        <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2d374ca343cb6d3bbbb4511e56209080d1c1c81f55342540fc2568d5cf45f6f0&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
         <div class="footer__info">
             <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
             <a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
@@ -481,7 +481,6 @@
                 <a href="#" class="footer__social-item"><img src="icons/footer/Instagram.png" alt="Instagram"></a>
                 <a href="#" class="footer__social-item"><img src="icons/footer/pint.png" alt="pinterest"></a>
             </div>
-        </div>
         </div>
     </footer>
 
@@ -523,8 +522,8 @@
         <img src="icons/up.svg" alt="up">
     </a>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
